rewrote Alternator